# wiliplayerconvert

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml  config.toml.example
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-14-fwmv-video-converter.md
docs/superpowers/specs/: 2026-06-14-fwmv-video-converter-design.md
examples/: convert_one.rs  smoke.rs
scripts/: dev-cargo.ps1  gen_fixtures.py  gen_sample.ps1
src/: app.rs  convert.rs  lib.rs  main.rs
src/fwmv/: adpcm.rs  format.rs  mod.rs
tests/: adpcm.rs  fwmv_format.rs  fwmv_pack.rs  integration_convert.rs
tests/fixtures/: pack_av.fwmv  pack_video_only.fwmv
