[package]
name = "fileconvert"
version = "0.1.0"
edition = "2021"

[lib]
name = "fileconvert"
path = "src/lib.rs"

[[bin]]
name = "fileconvert"
path = "src/main.rs"

[dependencies]
# ffmpeg-the-third (v5) supports the installed FFmpeg 8.1; aliased to the
# `ffmpeg_next` import name so the pipeline code reads against a stable name.
ffmpeg-next = { package = "ffmpeg-the-third", version = "5.0" }
# GUI deps (Task 10). eframe re-exports egui (import as `eframe::egui`), so we do
# not depend on a separate `egui` crate to avoid a version mismatch.
eframe = "0.29"
rfd = "0.15"

[profile.release]
lto = true
strip = true
