[package]
name = "wiliplayerconvert"
version = "0.1.0"
edition = "2021"
description = "Desktop app that converts ordinary videos into .fwmv files for the FreeWili movie player. FFmpeg is statically linked, so the binary is self-contained."
authors = ["Dave Robins"]
license = "MIT"
repository = "https://github.com/evaderkrub/wiliplayerconvert"
readme = "README.md"
keywords = ["video", "converter", "ffmpeg", "freewili", "fwmv"]
categories = ["multimedia::video", "command-line-utilities"]

[lib]
name = "wiliplayerconvert"
path = "src/lib.rs"

[[bin]]
name = "wiliplayerconvert"
path = "src/main.rs"

[dependencies]
# ffmpeg-the-third (v5) supports the installed FFmpeg 8.1; aliased to the
# `ffmpeg_next` import name so the pipeline code reads against a stable name.
ffmpeg-next = { package = "ffmpeg-the-third", version = "5.0" }
# GUI deps. eframe re-exports egui (import as `eframe::egui`); persistence lets
# us remember the destination + concurrency across runs. egui_extras provides the
# resizable table.
eframe = { version = "0.29", features = ["persistence"] }
egui_extras = "0.29"
rfd = "0.15"

[profile.release]
lto = true
strip = true
